fix pagination links on mobile

--- a/src/js/components/pagination/pagination.module.scss
+++ b/src/js/components/pagination/pagination.module.scss
@@ -43,7 +43,7 @@
 .paginationLink {
   display: inline-block;
   color: #fff;
-  padding: 10px 12px;
+  padding: 4px 6px;
   background-color: var(--el-bg-color-primary);
   border-radius: var(--btn-radius);
   transition: background-color 0.3s ease;
